--- a/src/gui/mzroll/forms/settingsform.ui
+++ b/src/gui/mzroll/forms/settingsform.ui
@@ -1292,6 +1292,14 @@ p, li { white-space: pre-wrap; }
        <string>External Programs</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout_5">
+       <item row="0" column="4">
+        <widget class="QPushButton" name="rawExtractSelect">
+         <property name="icon">
+          <iconset resource="../mzroll.qrc">
+           <normaloff>:/images/fileopen.png</normaloff>:/images/fileopen.png</iconset>
+         </property>
+        </widget>
+       </item>
        <item row="1" column="5">
         <widget class="QLineEdit" name="Rprogram">
          <property name="inputMask">
@@ -1326,14 +1334,6 @@ p, li { white-space: pre-wrap; }
          </property>
         </widget>
        </item>
-       <item row="0" column="4">
-        <widget class="QPushButton" name="rawExtractSelect">
-         <property name="icon">
-          <iconset resource="../mzroll.qrc">
-           <normaloff>:/images/fileopen.png</normaloff>:/images/fileopen.png</iconset>
-         </property>
-        </widget>
-       </item>
        <item row="1" column="4">
         <widget class="QPushButton" name="RProgramSelect">
          <property name="icon">
@@ -1364,7 +1364,7 @@ p, li { white-space: pre-wrap; }
       <widget class="QLineEdit" name="msconvert_file_path">
        <property name="geometry">
         <rect>
-         <x>180</x>
+         <x>160</x>
          <y>50</y>
          <width>451</width>
          <height>20</height>
@@ -1387,7 +1387,7 @@ p, li { white-space: pre-wrap; }
       <widget class="QComboBox" name="msconvert_output_file_type">
        <property name="geometry">
         <rect>
-         <x>180</x>
+         <x>160</x>
          <y>130</y>
          <width>211</width>
          <height>22</height>
@@ -1407,7 +1407,7 @@ p, li { white-space: pre-wrap; }
       <widget class="QPushButton" name="msconvert_start_conversion_button">
        <property name="geometry">
         <rect>
-         <x>180</x>
+         <x>160</x>
          <y>170</y>
          <width>111</width>
          <height>31</height>
@@ -1433,7 +1433,7 @@ p, li { white-space: pre-wrap; }
       <widget class="QComboBox" name="msconvert_input_type">
        <property name="geometry">
         <rect>
-         <x>180</x>
+         <x>160</x>
          <y>90</y>
          <width>211</width>
          <height>22</height>
@@ -1459,6 +1459,81 @@ p, li { white-space: pre-wrap; }
          <string>o</string>
         </property>
        </item>
+      </widget>
+      <widget class="QProgressBar" name="progressBar">
+       <property name="geometry">
+        <rect>
+         <x>280</x>
+         <y>170</y>
+         <width>451</width>
+         <height>31</height>
+        </rect>
+       </property>
+       <property name="value">
+        <number>0</number>
+       </property>
+       <property name="invertedAppearance">
+        <bool>false</bool>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="msconvertInputPath">
+       <property name="geometry">
+        <rect>
+         <x>620</x>
+         <y>50</y>
+         <width>21</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="icon">
+        <iconset resource="../mzroll.qrc">
+         <normaloff>:/images/fileopen.png</normaloff>:/images/fileopen.png</iconset>
+       </property>
+       <property name="iconSize">
+        <size>
+         <width>14</width>
+         <height>14</height>
+        </size>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_39">
+       <property name="geometry">
+        <rect>
+         <x>80</x>
+         <y>220</y>
+         <width>61</width>
+         <height>20</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Reg. Script</string>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="scriptPathInput">
+       <property name="geometry">
+        <rect>
+         <x>160</x>
+         <y>220</y>
+         <width>451</width>
+         <height>20</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="bashScriptButton">
+       <property name="geometry">
+        <rect>
+         <x>630</x>
+         <y>220</y>
+         <width>101</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Modify</string>
+       </property>
       </widget>
      </widget>
     </widget>
