ftr: allow users to  reset Peaks dialog values to defaults
- a new reset button in peaks dialog to go back
  to the default values

--- a/src/gui/mzroll/forms/peakdetectiondialog.ui
+++ b/src/gui/mzroll/forms/peakdetectiondialog.ui
@@ -993,6 +993,13 @@
         </property>
        </widget>
       </item>
+      <item row="5" column="3">
+       <widget class="QPushButton" name="resetButton">
+        <property name="text">
+         <string>Restore defaults</string>
+        </property>
+       </widget>
+      </item>
      </layout>
     </widget>
    </item>
